[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ZShooter DRP"
version = "0.0.1"
description = "Placeholder for ZShooter DRP"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jeb Bailey", email = "jibailey@caltech.edu" }]
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

